#1 pom.xmlからJavaFXの機能を削除した。
(JavaFXに共通機能を移植する #1)